# jmci

./: LICENSE  README.md  main.py  pyproject.toml
src/jmci/: __init__.py  cli.py  download.py  logger.py  search.py  utils.py
src/typings/jmci/: cli.pyi  download.pyi  logger.pyi  search.pyi  utils.pyi
